--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
 
     <string name="profile_alert">Hold up! Is this a mistake?</string>
     <string name="oops">Oops</string>
+    <string name="editProfile">editProfile</string>
 </resources>
