events page completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,22 @@
     <string name="sutd_campus">
 SUTD Campus Centre
 </string>
+    <string name="event_descrip">
+        Looking for something special to do during the Lantern Festival? GET READY because the COOLEST event ever is almost here!!\n
+
+Imagine this:\n
+
+INSANE Performances\n
+HEART-THUMPING Games\n
+EXCLUSIVE Merchandise\n
+EPIC Prizes\n
+
+It is THE place to be!\n
+
+Save the date: 24th Feb, 6:00 PM - 9:30 PM, SUTD Campus Centre right after Open House Day 1! \n
+
+Let us turn up and make some epic memories together in the light. This is not just an event; it is our vibe, our night! \n
+
+    </string>
+    <string name="org_name">ROOT (Student Government) </string>
 </resources>
