dropdown and like button fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@ Let us turn up and make some epic memories together in the light. This is not ju
 
     </string>
     <string name="org_name">ROOT (Student Government) </string>
+    <string name="event_name">Night Fiesta</string>
+    <string name="event_date_time">24 February 2024 | 1800 - 2130 </string>
+    <string name="event_location">SUTD Campus Centre</string>
+    <string name="tag1">#Campus Life  </string>
+    <string name="tag2">#Fifth row  </string>
 </resources>
